--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,7 @@
 
 # Site settings
 title: Tameez
+subtitle: Train your ear to distinguish Arabic sounds. (beta)
 email: jakub AT szypulka.de
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
@@ -14,7 +15,7 @@ description: > # this means to ignore newlines until "baseurl:"
   Google search results) and in your feed.xml site description.
 baseurl: "/tameez" # the subpath of your site, e.g. /blog
 url: "jaksz.github.io" # the base hostname & protocol for your site
-github_username:  jaksz
+github_username:  jaksz/tameez
 
 # Build settings
 markdown: kramdown
