--- a/_config.yml
+++ b/_config.yml
@@ -7,12 +7,8 @@
 
 # Site settings
 title: Tameez
-subtitle: Train your ear to distinguish Arabic sounds. (beta)
+subtitle: Train your ear to distinguish Arabic sounds.
 email: jakub AT szypulka.de
-description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
 baseurl: "/tameez" # the subpath of your site, e.g. /blog
 url: "jaksz.github.io" # the base hostname & protocol for your site
 github_username:  jaksz/tameez
